test/Fail/RewritingNotSafe.err
RewritingNotSafe.agda:2,1-28: error: [SafeFlagPragma]
Cannot set OPTIONS pragma --rewriting with safe flag.
